• Fixed list actions loading wrong results when using ids arg • Fixed incorrect height of carousel contents • Fixed HeaderWrapper styling • Fixed overflow bug on scroll up / tooltip hover • Fixed empty collections being created when no files in batch are successful

--- a/medior/css/index.css
+++ b/medior/css/index.css
@@ -58,6 +58,7 @@ body {
   font-family: "Roboto", "Calibri", sans-serif;
   font-size: 18px;
   font-weight: 500;
+  overflow: hidden;
   transition: all 0.2s ease-in-out;
 }
 
